--- a/views/pages/home/home.pug
+++ b/views/pages/home/home.pug
@@ -104,3 +104,5 @@ block bodyContent
                         button#tweetBtn(disabled) Tweet
             .tweetPost_container
         .right_side_container
+    script.
+        const user = !{userObj}
