--- a/public/scss/home.scss
+++ b/public/scss/home.scss
@@ -280,6 +280,7 @@
       .tweet {
         border-bottom: 1px solid #dfdfdf;
         padding: 20px;
+        cursor: pointer;
         display: flex;
         .avatar-area {
           width: 50px;
@@ -428,7 +429,7 @@
         grid-template-columns: auto auto;
         border-radius: 10px;
         overflow: hidden;
-        border: 2px solid #dfdfdf;
+        border: 1px solid #dfdfdf;
         .tweetImg {
           width: 100%;
           height: 100%;
