single post done

--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -811,3 +811,9 @@
   font-size: 12px;
   pointer-events: none;
 }
+
+.backBtn {
+  border: none;
+  background: transparent;
+  margin-right: 10px;
+}
