--- a/views/pages/home/home.pug
+++ b/views/pages/home/home.pug
@@ -13,8 +13,8 @@ block bodyContent
         .modal-dialog.modal-dialog-centered
             .modal-content
                 .modal-header
-                    h1#commentModalTitle.modal-title.fs-5 Reply
-                    button.btn-close(type='button' data-bs-dismiss='modal' aria-label='Close')
+                    h2#commentModalTitle.modal-title.fs-5 Reply
+                    button.btn-close(type='button' class="btn-close btn-close-white" data-bs-dismiss='modal' aria-label='Close')
                 .modal-body
 
                 .modal-footer
