--- a/public/scss/home.scss
+++ b/public/scss/home.scss
@@ -47,14 +47,15 @@
             align-items: center;
             padding: 10px 35px 12px 12px;
             font-size: 20px;
-            color: black;
+            color: white;
             font-weight: 600;
             margin: 5px 0;
             width: fit-content;
             border-radius: 30px;
             transition: 0.3s;
             &:hover {
-              background-color: #e6e7e7;
+              background: rgba(51, 38, 153, 0.1254901961) !important;
+              box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15) !important;
             }
             span {
               display: flex;
@@ -107,7 +108,8 @@
       transition: 0.3s;
       cursor: pointer;
       &:hover {
-        background-color: #e6e7e7;
+        background: rgba(51, 38, 153, 0.1254901961) !important;
+        box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15) !important;
       }
 
       .user_profile_info {
@@ -125,11 +127,14 @@
             font-size: 15px;
             font-weight: 00;
             line-height: 0;
-            color: black;
+            color: white;
           }
           span {
-            color: #536471;
+            color: #a5a9ad !important;
           }
+        }
+        i {
+          color: #a5a9ad !important;
         }
       }
       .menu {
@@ -158,8 +163,8 @@
     flex: 1;
     height: 100vh;
     overflow: auto;
-    border-left: 1px solid #dfdfdf;
-    border-right: 1px solid #dfdfdf;
+    border-left: 1px solid #252424;
+    border-right: 1px solid #252424;
     .post_header {
       padding: 20px;
       display: flex;
@@ -168,15 +173,16 @@
       height: 60px;
       h4 {
         font-weight: 700;
-        color: black;
+        color: white;
       }
       i {
         cursor: pointer;
+        color: white;
       }
     }
     .create_post {
-      border-top: 1px solid #dfdfdf;
-      border-bottom: 1px solid #dfdfdf;
+      border-top: 1px solid #252424;
+      border-bottom: 1px solid #252424;
       padding: 20px;
       display: flex;
       .user_avatar {
@@ -193,6 +199,8 @@
         flex: 1;
         textarea {
           width: 100%;
+          background: transparent;
+          color: white;
           border: none;
           outline: none;
           font-weight: 500;
@@ -205,7 +213,7 @@
           button {
             border: none;
             border-radius: 30px;
-            padding: 10px 35px;
+            padding: 10px 42px;
             color: white;
             font-size: 15px;
             font-weight: 500;
@@ -233,7 +241,7 @@
               height: 100%;
               object-fit: cover;
               border-radius: 10px;
-              border: 1px solid #e5e5e5;
+              border: 1px solid #252424;
             }
 
             #close_btn {
@@ -275,10 +283,10 @@
         padding-left: 27px;
         font-size: 19px;
         font-weight: 500;
-        color: black;
+        color: white;
       }
       .tweet {
-        border-bottom: 1px solid #dfdfdf;
+        border-bottom: 1px solid #252424;
         padding: 20px;
         cursor: pointer;
         display: flex;
@@ -292,15 +300,17 @@
           }
         }
         .tweet_body {
+          max-width: 550px;
+          width: 100%;
           margin-left: 12px;
           .tweetsPostImages {
             margin-top: 10px;
-            max-width: 500px;
+            max-width: 550px;
             max-height: 500px;
             display: grid;
             grid-template-columns: auto auto;
             border-radius: 10px;
-            border: 1px solid #dfdfdf;
+            border: 1px solid #252424;
             overflow: hidden;
             .tweetImg {
               width: 100%;
@@ -314,6 +324,7 @@
             }
           }
           .header {
+            margin-top: -10px;
             .displayUserInfo {
               display: flex;
               gap: 7px;
@@ -322,23 +333,23 @@
                 text-decoration: none;
                 font-size: 18px;
                 font-weight: 600;
-                color: black;
+                color: white;
                 &:hover {
                   text-decoration: underline !important;
                 }
               }
               span {
-                color: #000;
+                color: white;
                 font-weight: 400;
                 font-size: 17px;
               }
             }
             .content {
               max-width: 250px;
-              margin-top: 8px;
               span {
                 font-weight: 500;
                 font-size: 17px;
+                color: white;
               }
             }
           }
@@ -407,7 +418,18 @@
     transition: 0.3s;
   }
 }
+
+//Reply Modal
 #replyModal {
+  .modal-content {
+    background-color: #010313 !important;
+  }
+  .modal-header {
+    color: white !important;
+    button {
+      color: white !important;
+    }
+  }
   .tweet {
     display: flex;
     .avatar-area {
@@ -429,7 +451,7 @@
         grid-template-columns: auto auto;
         border-radius: 10px;
         overflow: hidden;
-        border: 1px solid #dfdfdf;
+        border: 1px solid #252424;
         .tweetImg {
           width: 100%;
           height: 100%;
@@ -442,6 +464,7 @@
         }
       }
       .header {
+        margin-top: -10px;
         .displayUserInfo {
           display: flex;
           gap: 7px;
@@ -450,13 +473,13 @@
             text-decoration: none;
             font-size: 18px;
             font-weight: 600;
-            color: black;
+            color: white;
             &:hover {
               text-decoration: underline !important;
             }
           }
           span {
-            color: #000;
+            color: white;
             font-weight: 400;
             font-size: 17px;
           }
@@ -467,6 +490,7 @@
           span {
             font-weight: 500;
             font-size: 17px;
+            color: white;
           }
         }
       }
@@ -528,11 +552,13 @@
       .reply_area {
         flex: 1;
         textarea {
+          background: transparent;
           width: 100%;
           border: none;
           outline: none;
           font-weight: 500;
           font-size: 17px;
+          color: white;
         }
         .reply_actions {
           display: flex;
@@ -569,7 +595,7 @@
               height: 100%;
               object-fit: cover;
               border-radius: 10px;
-              border: 1px solid #e5e5e5;
+              border: 1px solid #252424;
             }
 
             #close_btn {
@@ -605,4 +631,8 @@
   border: none;
   background: transparent;
   margin-right: 10px;
+}
+
+.replyUser {
+  color: white;
 }
