--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -8,6 +8,7 @@
 }
 body {
   font-family: "Poppins", sans-serif;
+  background-color: #010313 !important;
 }
 a {
   text-decoration: none !important;
