--- a/views/pages/auth/verifyOtp.pug
+++ b/views/pages/auth/verifyOtp.pug
@@ -21,13 +21,13 @@ block bodyContent
                         p.error #{error.otp.msg}
                     input(type="hidden" name="otpId" value =otp.otpId)
                     input(type="hidden" name="otpEmail" value=otp.email)
-                    input.otpBtn(type="submit" class="form-control mt-3" value="Verify Now")
+                    button.otpBtn(type="submit" class="form-control mt-3" value="Verify Now") Verify Now
                     .countDown.text-center.mt-3
                         p#countDown.fw-bold.expireIn Expire In:
                             span.text-success.mx-2 1.59
                 form(action="/resetPassword" method="post")
                     input#username(type="hidden" name="email" value=otp.email)
-                    input#resendOtp_btn(type="submit" class="form-control resendOtp_btn" value="Resend")
+                    button#resendOtp_btn(type="submit" class="form-control resendOtp_btn" value="Resend") Resend
 
                     p.toggle_page.mt-2 Need to login?
                         a(href="/login") Login Here
