--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -17,7 +17,8 @@ html(lang="en")
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js" integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous">
         </script>
         //- font awesome link
-        <script src="https://kit.fontawesome.com/e88a770387.js" crossorigin="anonymous"></script>
+        script(src="https://kit.fontawesome.com/e88a770387.js" crossorigin="anonymous")
+        script(src="//cdn.jsdelivr.net/npm/sweetalert2@11")
         //- JS Script
         script(src="/assets/js/app.js" defer) 
         block jsScript
